fixed mobile navbar spacing

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    font-family: 'Inter', sans-serif;
+    font-family: "Lexend", sans-serif;
     background: linear-gradient(to bottom, #000000, #131313) no-repeat center fixed;
     height: 100vh;
     margin: 0;   
@@ -22,6 +22,11 @@ h2{
     font-style: italic;
     margin: 0;
     font-size: 3.5vh;
+}
+
+h3{
+    color:white;
+
 }
 
 .navbar {
@@ -65,7 +70,6 @@ h2{
     top: 0;
     right: 0;
     height: 100vh;
-    width: 250px;
     z-index: 2000;
     background-color:rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(10px);
@@ -73,7 +77,7 @@ h2{
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    gap: 1.5rem;
+    gap: 2rem;
     padding: 2rem;
 }
 
